# apkshit

./: README.md  build.gradle  build.sh  build_so.sh  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: locai_jni.cpp
app/src/main/java/com/locai/app/: ChatAdapter.java  LLMEngine.java  LlamaJNI.java  MainActivity.java  MemoryManager.java  Message.java  ModelAdapter.java  ModelDownloader.java  ModelInfo.java  ModelInstallActivity.java  SplashActivity.java  StorageChecker.java
app/src/main/jniLibs/arm64-v8a/: README.txt
app/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml
app/src/main/res/drawable/: bg_badge.xml  bg_badge_size.xml  bg_badge_speed.xml  bg_btn_ghost.xml  bg_btn_primary.xml  bg_dot.xml  bg_dot_accent.xml  bg_glow.xml  bg_header_gradient.xml  bg_input.xml  bg_message_ai.xml  bg_message_user.xml  bg_model_card.xml  bg_model_card_selected.xml  bg_progress_ring_track.xml  bg_send_btn.xml  ic_clear.xml  ic_logo_bg.xml  ic_menu_open_file.xml  ic_mide_logo.xml  ic_send.xml  progress_bar_gradient.xml
app/src/main/res/layout/: activity_main.xml  activity_model_install.xml  activity_splash.xml  fragment_editor.xml  item_editor_tab.xml  item_logcat.xml  item_message_ai.xml  item_message_user.xml  item_model_card.xml  nav_header.xml
app/src/main/res/menu/: bottom_nav_menu.xml  drawer_menu.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
(+92 files in other folders)
